// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header component match snapshot correctly 1`] = `
<div
  className="header py4 full-width relative flex md-flex-justify-center sm-flex-start flex-center dark-mode"
>
  <h1
    className="sm-pl3"
  >
    COVID-19
  </h1>
  <div
    className="absolute toggle-button"
  >
    <ThemeToggle
      onChange={[Function]}
    />
  </div>
</div>
`;

exports[`Header component match snapshot correctly 2`] = `
<div
  className="header py4 full-width relative flex md-flex-justify-center sm-flex-start flex-center light-mode"
>
  <h1
    className="sm-pl3"
  >
    COVID-19
  </h1>
  <div
    className="absolute toggle-button"
  >
    <ThemeToggle
      onChange={[Function]}
    />
  </div>
</div>
`;

exports[`Header component match snapshot correctly 3`] = `
<Header
  changeColorMode={[Function]}
  colorMode="light"
>
  <div
    className="header py4 full-width relative flex md-flex-justify-center sm-flex-start flex-center light-mode"
  >
    <h1
      className="sm-pl3"
    >
      COVID-19
    </h1>
    <div
      className="absolute toggle-button"
    >
      <ThemeToggle
        onChange={[Function]}
      >
        <button
          className="theme-toggle p2 sm-p1"
          onClick={[Function]}
          type="button"
        >
          <ArrowUp
            darkMode={false}
            size={48}
          >
            <svg
              fill="#201c3a"
              height={48}
              stroke="#201c3a"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="2"
              viewBox="0 0 24 24"
              width={48}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M21 12.79A9 9 0 1 1 11.21 3 7 7 0 0 0 21 12.79z"
              />
            </svg>
          </ArrowUp>
        </button>
      </ThemeToggle>
    </div>
  </div>
</Header>
`;
